VAN-25324: QA-Gaming-UI: Most of the pop windows have too much space around the content. Resolve 25280 cause this issue, the gap of empty list should be 2rem, but if there are items, bottom gap should be 0, otherwise the gap seems so long.

--- a/vtr-ui/src/app/components/modal/modal-gaming-running-app-list/modal-gaming-running-app-list.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-gaming-running-app-list/modal-gaming-running-app-list.component.scss
@@ -43,7 +43,7 @@
 	}
 	.modal-header {
 		display: block;
-		padding: 2rem;
+		padding: 2rem 2rem 0 2rem;
 		border-bottom: none;
 		div {
 			font-size: 3rem;
@@ -79,6 +79,9 @@
 				color: $gaming_lightest;
 				transform: scale(0.96);
 			}
+		}
+		&.empty {
+			padding: 2rem;
 		}
 	}
 	.modal-body {
